tests/fail/ch_stable/missing_bracket.stderr
error: Missing '}' after given '{'. Literal '{' need to be escaped as '{{':
       At "asdf{asdf"
               ^^^^^^
 --> $DIR/missing_bracket.rs:2:26
  |
2 |     sscanf::scanf!("hi", "asdf{asdf");
  |                          ^^^^^^^^^^^

error: Unexpected standalone '}'. Literal '}' need to be escaped as '}}':
       At "asdf}asdf"
               ^
 --> $DIR/missing_bracket.rs:3:26
  |
3 |     sscanf::scanf!("hi", "asdf}asdf");
  |                          ^^^^^^^^^^^
